fixed z-index video file and text dec

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ body {
   width: 100%;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 .text__desc {
   overflow-y: scroll;
